recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:12: error: value :: is not a member of Int
  return min(l.head::l.head)
                   ^